[tool.poetry]
name = "ODetaM"
version = "1.4.0"
description = "A simple ODM (Object Document Mapper) for Deta Base, based on pydantic."
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
readme = "README.md"
repository = "https://github.com/rickh94/odetam"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pydantic = "^1.7"
deta = { extras = ["async"], version = "1.1.0a2" }
ujson = "^4.0"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.10"
faker = "^17.6.0"
pydantic = { extras = ["email"], version = "^1.8.2" }
pytest-asyncio = "^0.15.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
